--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "lodash": "^4.17.4",
     "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.3.0"
   }
 }
