--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'me.dm7.barcodescanner:zxing:1.9.1'
+
 
     testCompile 'junit:junit:4.12'
 }
