--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ScannerActivity">
-        </activity>
+        <activity android:name=".ScannerActivity"/>
+        <activity android:name=".CheckoutActivity"/>
     </application>
 
 </manifest>
